# SplendorDuel

./: .gitignore  CMakeLists.txt  Qt.pro  README.md  Rapport2.md  UML.txt  UML_v2.txt  carte.cpp  carte.h  concepts.md  debug.cpp  debug.h  jetons.h  jeu.h  joueur.h  main.cpp  main.h  pioche_tirage.h  privilege.h  rapport1.md  sac_plateau.h
Qt_cmake/: CMakeLists.txt  Qt.pro  main.cpp  main.h  mainwindow.cpp  mainwindow.h  plateau.cpp  plateau.h  playerinputdialog.cpp  playerinputdialog.h  popup_text.cpp  popup_text.h  qt_cards_main.cpp  qt_cards_main.h  qt_choicepopup.h  qt_jetons_bas.h  qt_jetons_main.cpp  qt_jetons_main.h  qt_labelclick.cpp  qt_labelclick.h  qt_plateau.cpp  qt_plateau.h  qt_popup_couleur.cpp  qt_popup_couleur.h  qt_popup_info.h  qt_popup_joker.cpp  qt_popup_joker.h  qt_popup_tirageoupioche.h  qt_popup_yesno.h  qt_tirages.cpp  qt_tirages.h  qt_vue_carte.cpp  qt_vue_carte.h  qt_vue_jeton.cpp  qt_vue_jeton.h  qt_vue_privilege.h  tirages.cpp  tirages.h  vuepartie.h
classes/: Exception.h  carte.cpp  carte.h  cartes.json  history.cpp  history.h  jetons.cpp  jetons.h  jeu.cpp  jeu.h  joueur.cpp  joueur.h  json.cpp  json.h  lots_privileges.cpp  lots_privileges.h  pioche.cpp  pioche.h  pioche_tirage.cpp  pioche_tirage.h  plateau.cpp  plateau.h  privilege.cpp  privilege.h  sac.cpp  sac.h  sac_plateau.cpp  sac_plateau.h  tirage.cpp  tirage.h
rapport/: Rapport_3.md  Rapport_final.md  UML_v3.txt  rapport1.md
src/: backup.json  cartes.json  history.json
